@@ -1,10 +1,6 @@
 require 'spec_helper_acceptance'
 
-
-# This set of tests should be last, so that we don't have to
-# reboot the servers to get manifests to apply fully.
-#
-test_name 'disabling kernel auditing via auditd class'
+test_name 'disabling auditing via auditd class'
 
 describe 'auditd class with simp auditd profile' do
   let(:enable_hieradata) {
@@ -20,7 +16,7 @@ describe 'auditd class with simp auditd profile' do
       'pki::cacerts_sources'    => ['file:///etc/pki/simp-testing/pki/cacerts'] ,
       'pki::private_key_source' => "file:///etc/pki/simp-testing/pki/private/%{fqdn}.pem",
       'pki::public_key_source'  => "file:///etc/pki/simp-testing/pki/public/%{fqdn}.pub",
-      'auditd::at_boot' => false
+      'auditd::enable' => false
     }
   }
 
@@ -41,19 +37,17 @@ describe 'auditd class with simp auditd profile' do
         end
       end
 
-      context 'disabling auditd at the kernel level' do
+      context 'disabling auditd' do
         it 'should work with no errors' do
           set_hieradata_on(host, disable_hieradata)
           apply_manifest_on(host, manifest, :catch_failures => true)
         end
 
-        # Note: In SIMP, svckill will take care of actually disabling auditd if
-        # it is no longer managed. Here, we're not including svckill by default.
-        it 'should not kill the auditd service' do
+        it 'should kill the auditd service' do
           result = YAML.safe_load(on(host, 'puppet resource service auditd --to_yaml').stdout)
 
-          expect(result['service']['auditd']['ensure']).to eq('running')
-          expect(result['service']['auditd']['enable']).to eq('true')
+          expect(result['service']['auditd']['ensure']).to eq('stopped')
+          expect(result['service']['auditd']['enable']).to eq('false')
         end
 
         it 'should require reboot on subsequent run' do
